Fixed single tweet dislay.  Need to fix message div alignment.

--- a/css/twittler.css
+++ b/css/twittler.css
@@ -7,18 +7,12 @@ body {
   background-color:#b0e0e6;
 }
 
-li {
-  list-style: none;
-}
-
 a {
-  color: ;
+  color: blue;
 }
 
 .logo {
   font-family: Arial, Helvetica, sans-serif;
-  height: 50px;
-  width: 150px;
   font-size: 36px;
   font-weight: bold;
   text-align: center;
@@ -29,37 +23,44 @@ a {
   width: 300px;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 14px;
-  text-align: left;
 }
 
 #draft {
   height: 20px;
-  width: 500px;
+  width: 700px;
 }
 
 #tweetbox {
   border: 1px solid #444;
   border-radius: 10px;
   background-color: #fff;
-  padding: 5px;
-  height: 200px;
-  width: 500px;
 }
 
 #tweetlist {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 14px;
-  font-weight: bold;
-  text-align: left;
 }
 
 .singleTweet {
-  padding: 10px 0;
   border-top: 1px solid #aaa;
 }
 
 .userName {
   font-weight: bold;
+  display: inline-block;
+  padding: 10px 0 10px 20px;
+  float: left;
 }
 
+.tweetTime {
+  font-weight: normal;
+  color: #555;
+  display: inline-block;
+  padding: 10px 20px 10px 0;
+  float: right;
+}
+
+.tweetCopy {
+  display: block;
+}
 
